--- a/index.html
+++ b/index.html
@@ -47,7 +47,15 @@
         </div>
       </div>
       <!-- to here  -->
-
+<div class="about">
+        <div class="bio-left">
+          <img src="rosie-the-kraken.png"/>
+        </div>
+        <div class="bio-right">
+          <h2>Jonathan Silva</h2>
+          <p> Homecook </p>
+        </div>
+      </div>
       <!-- paste what you copied directly below here -->
      
 
